# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import authRouter from "./auth";
 import profilesRouter from "./profiles";
 import avatarRouter from "./avatar";
 import billingRouter from "./billing";
+import messagesRouter from "./messages";
 import adminRouter from "./admin";
 import citizenxRouter from "./citizenx";
 import mentorshipRouter from "./mentorship";
@@ -17,6 +18,7 @@ router.use(agentRouter);
 router.use(profilesRouter);
 router.use(avatarRouter);
 router.use(billingRouter);
+router.use(messagesRouter);
 router.use(adminRouter);
 router.use(citizenxRouter);
 router.use(mentorshipRouter);
